@@ -1,7 +1,12 @@
+2005-12-29  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/abi/thunk3.C: New.
+	* g++.dg/abi/thunk4.C: New.
+
 2005-12-29  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/25532
-	*gfortran.dg/host_used_types_1.f90: New test. Check that host
+	* gfortran.dg/host_used_types_1.f90: New test. Check that host
 	associated derived type components of derived types are
 	properly declared in contained procedures.
 
